--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 body {
   margin: 0;
   background: #000;
-  
   color: #fff;
   font-family: monospace;
 }
@@ -41,7 +40,10 @@ body {
 }
 
 #start-btn img {
-  height: 24px;
+  background-color: transparent;
+  border: none;
+  width: 32px;
+  height: 32px;
 }
 
 #start-menu {
