--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   background: #000;
   color: #fff;
-  font-family: 'Pixy', monospace;
+  font-family: 'Press Start 2P', monospace;
 }
 
 .desktop {
