--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   background: #000;
-  color: #fff;
+  color: #dcdcdc;
   font-family: 'Press Start 2P', monospace;
 }
 
@@ -19,7 +19,7 @@ body {
 .icon {
   width: 64px;
   text-align: center;
-  color: #ccc;
+  color: #dcdcdc;
   cursor: pointer;
   font-size: 12px;
 }
@@ -46,7 +46,7 @@ body {
   left: 10px;
   background: #111;
   border: 1px solid #400;
-  color: #fff;
+  color: #dcdcdc;
   width: 150px;
 }
 
@@ -95,8 +95,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 40px;
+  width: 56px;
+  height: 56px;
   background: transparent;
   border: none;
   padding: 0;
@@ -105,8 +105,8 @@ body {
 }
 
 #start-btn img {
-  width: 40px;
-  height: 40px;
+  width: 56px;
+  height: 56px;
   display: block;
   object-fit: contain;
   background: transparent;
@@ -119,7 +119,7 @@ body {
 .taskbar-time {
   margin-left: auto;
   padding: 0 15px;
-  color: #ccc;
+  color: #dcdcdc;
   font-size: 14px;
   user-select: none;
 }
