--- a/style.css
+++ b/style.css
@@ -40,17 +40,19 @@ body {
   padding-left: 10px;
 }
 
+
 #start-menu {
-  width: 220px;
-  box-shadow: 0 0 15px #fff, 0 0 30px #aaa;
   position: absolute;
-  bottom: 50px;
+  bottom: 60px;
   left: 10px;
   background: #111;
   border: 3px solid #ffffff;
   color: #dcdcdc;
-  width: 150px;
+  width: 220px;
+  min-height: 200px;
+  padding: 15px;
 }
+
 
 #start-menu.hidden {
   display: none;
