--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-image: url('images/bliss-dark.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  font-family: 'VT323', monospace;
+  color: #fff;
+}
+.icon {
+  width: 48px;
+  text-align: center;
+  color: #dcdcdc;
+  cursor: pointer;
+  font-size: 12px;
+}
+.icon img {
+  width: 48px;
+  height: 48px;
+}
+
 /* === Общие стили === */
 * {
   cursor: url('images/cursor.png'), auto !important;
@@ -24,18 +47,9 @@ body {
   gap: 30px;
 }
 
-.icon {
-  width: 64px;
-  text-align: center;
-  color: #dcdcdc;
-  cursor: pointer;
-  font-size: 12px;
-}
 
-.icon img {
-  width: 64px;
-  height: 64px;
-}
+
+
 
 /* === Панель задач === */
 .taskbar {
