--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@ html, body {
   padding: 0;
   height: 100%;
   background-image: url('images/bliss-dark.png');
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
   background-position: center;
   background-repeat: no-repeat;
   font-family: 'VT323', monospace;
