--- a/style.css
+++ b/style.css
@@ -12,17 +12,21 @@ html, body {
   font-family: 'VT323', monospace;
   color: #fff;
 }
+
 .icon {
-  width: 96px;
+  width: 128px;
   text-align: center;
   color: #dcdcdc;
   cursor: pointer;
   font-size: 16px;
 }
+
+
 .icon img {
-  width: 96px;
-  height: 96px;
+  width: 128px;
+  height: 128px;
 }
+
 
 /* === Общие стили === */
 * {
@@ -55,16 +59,20 @@ body {
 
 
 /* === Панель задач === */
+
 .taskbar {
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 40px;
-  background: #111;
+  background: #3a3a3a;
+  border-top: 1px solid #666;
   display: flex;
   align-items: center;
   padding-left: 10px;
+  z-index: 999;
 }
+
 
 #start-menu {
   position: absolute;
