--- a/style.css
+++ b/style.css
@@ -125,18 +125,25 @@ body {
   left: 100px;
   width: 400px;
   height: 300px;
-  background: #585858;
-  border: 2px solid red;
-  box-shadow: 0 0 20px red;
+  background: #c0c0c0;
+  border: 2px solid #000;
+  box-shadow: inset -1px -1px 0 #fff, inset 1px 1px 0 #808080;
   display: flex;
   flex-direction: column;
+  font-family: Tahoma, sans-serif;
 }
 
 .window-header {
   background: #1a4876;
-  padding: 5px;
+  padding: 5px 8px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  color: white;
+  font-weight: bold;
+  font-size: 13px;
+  border-bottom: 2px solid #000;
+  box-shadow: inset 0 1px #fff, inset 0 -1px #000;
   cursor: move;
 }
 
