--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html, body {
 .icon {
   width: 96px;
   text-align: center;
-  color: #dcdcdc;
+  color: #000000;
   cursor: pointer;
   font-size: 16px;
 }
@@ -36,7 +36,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  color: #dcdcdc;
+  color: #000000;
   font-family: 'VT323', monospace;
   font-size: 14px;
   line-height: 1.5;
@@ -72,7 +72,7 @@ body {
   left: 10px;
   background: #585858;
   border: 3px solid #ffffff;
-  color: #dcdcdc;
+  color: #000000;
   width: 220px;
   min-height: 200px;
   padding: 15px;
@@ -94,7 +94,7 @@ body {
 .taskbar-time {
   margin-left: auto;
   padding: 0 15px;
-  color: #dcdcdc;
+  color: #000000;
   font-size: 14px;
   user-select: none;
 }
@@ -140,7 +140,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #ffffff;
+  color: #000000;
   font-weight: bold;
   font-size: 13px;
   border-bottom: 2px solid #000;
@@ -153,6 +153,8 @@ body {
   flex: 1;
   padding: 10px;
   overflow-y: auto;
+  color: #000000;
+  font-family: Tahoma, sans-serif;
 }
 
 /* === Меню === */
@@ -166,7 +168,7 @@ body {
 }
 .menu a {
   margin: 0 10px;
-  color: #e0e0e0;
+  color: #000000;
   text-decoration: none;
   position: relative;
 }
@@ -193,7 +195,7 @@ body {
   background: #585858;
   border: 1px solid #333;
   transition: 0.2s;
-  color: #e0e0e0;
+  color: #000000;
   text-decoration: none;
   box-shadow: 0 0 8px rgba(255,0,64,0.1);
 }
@@ -296,7 +298,7 @@ body {
 }
 textarea, input[type="text"] {
   background: #000;
-  color: #e0e0e0;
+  color: #000000;
   border: 1px solid #555;
   font-family: 'VT323', monospace;
   font-size: 14px;
@@ -309,7 +311,7 @@ textarea {
 input[type="submit"], button {
   margin-top: 6px;
   background: #111;
-  color: #e0e0e0;
+  color: #000000;
   border: 1px solid #666;
   padding: 6px 10px;
   cursor: pointer;
