--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ body {
   flex: 1;
   padding: 10px;
   overflow-y: auto;
-  color: #dcdcdc;
+  color: #000000 !important;
   font-family: Tahoma, sans-serif;
 }
 
