--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
   bottom: 0;
   width: 100%;
   height: 40px;
-  background: #585858;
+  background: #c0c0c0;
   display: flex;
   align-items: center;
   padding-left: 10px;
@@ -70,7 +70,7 @@ body {
   position: absolute;
   bottom: 60px;
   left: 10px;
-  background: #585858;
+  background: #c0c0c0;
   border: 3px solid #ffffff;
   color: #dcdcdc;
   width: 220px;
@@ -192,7 +192,7 @@ body {
 .thread-link {
   display: block;
   padding: 12px;
-  background: #585858;
+  background: #c0c0c0;
   border: 1px solid #333;
   transition: 0.2s;
   color: #e0e0e0;
