--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
   bottom: 0;
   width: 100%;
   height: 40px;
-  background: #c0c0c0;
+  background: #b7b5a8;
   display: flex;
   align-items: center;
   padding-left: 10px;
@@ -70,7 +70,7 @@ body {
   position: absolute;
   bottom: 60px;
   left: 10px;
-  background: #c0c0c0;
+  background: #b7b5a8;
   border: 3px solid #ffffff;
   color: #dcdcdc;
   width: 220px;
@@ -125,7 +125,7 @@ body {
   left: 100px;
   width: 400px;
   height: 300px;
-  background: #c0c0c0;
+  background: #b7b5a8;
   border: 2px solid #000;
   box-shadow: inset -1px -1px 0 #fff, inset 1px 1px 0 #808080;
   display: flex;
@@ -192,7 +192,7 @@ body {
 .thread-link {
   display: block;
   padding: 12px;
-  background: #c0c0c0;
+  background: #b7b5a8;
   border: 1px solid #333;
   transition: 0.2s;
   color: #e0e0e0;
