--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body {
 .taskbar-time {
   margin-left: auto;
   padding: 0 15px;
-  color: #dcdcdc;
+  color: #000000;
   font-size: 14px;
   user-select: none;
 }
